app/styles/main.css
[ng\:cloak],[ng-cloak],.ng-cloak{display:none !important}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

html, body {
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  height: 100%;
}

.footer {
  bottom: 40px !important;
}

a, button {
  outline: 0 !important;
}

.text-centre {
  text-align: center;
  margin: 0;
  padding: 0;
}

.ngdialog {
  top: -100px !important;
}

/* Get rid of ugly number input spinner in chrome and ff*/
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
input[type=number] {
    -moz-appearance:textfield;
}

/* Container which centers content vertically and horizontally*/
.centre-content {
  text-align: center;
  transform: translate(-50%, -50%);
  top: 45%;
  left: 50%;
  position: absolute;
  margin: 0 auto;
  width: 40%;
}

/* Can be applied to any class to remove all padding*/
.nopadding {
   padding: 0 !important;
   margin: 0 !important;
}
.no-left-right-padding {
  padding-right: 0 !important;
  padding-left: 0 !important;
}
.no-up-down-padding {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}
/* Makes the list scrollable */
.scrollable {
  overflow: auto;
  height: 85vh;
}

/* Navbar brand stuff */
.navbar {
/*  height: 50px;*/
}
.navbar-default {
  font-size: 18px;
  margin-bottom: 0px;
}
.navbar-default a:visited{
  color: white !important;
}
.navbar-default a:hover{
  color: #FFB800 !important;
}
.navbar-default a:active{
  color: white !important;
}
.navbar-default {
  background-color: #0089CC;
  color: white;
}
.navbar-brand-centred {
    position: absolute;
    left: 50%;
    display: block;
    width: 250px;
    text-align: center;
    color: white;
    font-size: 36px;
}
.navbar-default .navbar-toggle .icon-bar {
  background-color: white;
}

.btn-cool {
  background-color: #28A15D;
  border-color: #036D31;
  color: white;
}
.btn-cool:visited {
  background-color: #28A15D;
  color: white;
}
.btn-cool:hover {
  background-color: #118945;
  color: white;
}
.btn-cool:active {
  color: white;
}
.btn-cool:focus {
  background-color: #118945;
  color: white;
}

.active {
/*  background-color: #28A15D !important;*/
  -webkit-transform-style: preserve-3d;
  transition: background .4s linear;
  -webkit-transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
}

.navbar>.container .navbar-brand-centred, 
.navbar>.container-fluid .navbar-brand-centred {
    margin-left: -125px;
}

.hidden {
  display: none;
}

/* Custom page footer */
.footer {
  position: absolute;
  bottom: 0px;
  left: 0px;
  height: 50px;
  width: 100%;
  padding-top: 19px;
  text-align: center;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }
}

/* Google Autocomplete stuff */
.pac-container {
  min-width: 350px;
}
.pac-item {
  height: 50px;
  font-size: 16px;
}
.pac-item-query {
  font-size: 18px;
}

/* Navbar search stuff */
.navbar-form.ng-hide-add.ng-hide-add-active,
.navbar-form.ng-hide-remove.ng-hide-remove-active {
  -webkit-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
  -moz-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
  -ms-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
  -o-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
  transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
}
.navbar-form.ng-hide {
  opacity: 0;
  line-height: 0;
  padding: 0 10px;
}

/* View transition stuff */
.view-animate.ng-enter, .view-animate.ng-leave {
  transition: transform 500ms ease;
  -moz-transition: transform 500ms ease;
  -webkit-transition: transform 500ms ease;
  -webkit-backface-visibility: hidden;
  -webkit-perspective: 1000;
  display:block;
  width:100%;
  position:absolute;
  top:0;
  left:0;
  right:0;
  bottom:0;
  padding: 0;
  margin: 0;
  padding-left:15px;
  padding-top:52px;
}
.view-animate.ng-enter{
  transform: translate3d(100%, 0, 0);
  -moz-transform: translate3d(100%, 0, 0);
  -webkit-transform: translate3d(100%, 0, 0);
}
.view-animate.ng-leave{
  transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -webkit-transform: translate3d(0, 0, 0);
}
.view-animate.ng-leave.ng-leave-active {
  transform: translate3d(-100%, 0, 0);
  -moz-transform: translate3d(-100%, 0, 0);
  -webkit-transform: translate3d(-100%, 0, 0);
}
.view-animate.ng-enter.ng-enter-active {
  transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -webkit-transform: translate3d(0, 0, 0);
}

/* Expand to full height */
.animate-expand {
  line-height: 25px;
  overflow: hidden;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
.animate-expand.ng-hide-add,
.animate-expand.ng-hide-remove {
  display: block !important;
  line-height: 0px;
}
.animate-expand.ng-hide-remove.ng-hide-remove-active {
  line-height: 25px;
}
.animate-expand.ng-hide-add {
  line-height: 25px;
}

#map_canvas {
  max-height: 0;
  overflow: hidden;
  margin: 0;
  padding: 0;
  -webkit-transform-style: preserve-3d;
  -webkit-transition: max-height 0.5s;
  -moz-transition: max-height 0.5s;
  -ms-transition: max-height 0.5s;
  -o-transition: max-height 0.5s;
  transition: max-height 0.5s;
}

@media screen and (max-width: 991px) {
 .navbar-nav {
    margin-left: 3px;
  }
}

/*
 * Off Canvas
 * --------------------------------------------------
 */
@media screen and (max-width: 767px) {
  .row-offcanvas {
    position: relative;
    -webkit-transform-style: preserve-3d;
    -webkit-transition: all .25s ease-out;
    -moz-transition: all .25s ease-out;
    -ms-transition: all .25s ease-out;
    -o-transition: all .25s ease-out;
    transition: all .25s ease-out;
  }
  .row-offcanvas-right {
    right: 0;
  }

  .row-offcanvas-left {
    left: 0;
  }
  .row-offcanvas-right
  .sidebar-offcanvas {
    right: -50%;
  }
  .row-offcanvas-left
  .sidebar-offcanvas {
    left: -90%;
    width: 80%;
    margin-left: 30px;
  }
  .row-offcanvas-right.active {
    right: 50%; 
  }
  .row-offcanvas-left.active {
    left: 90%; 
  }
  .sidebar-offcanvas {
    position: absolute;
    top: 0;
    width: 50%;
  }
}

